# aulmed

./: .env.example  .gitignore  CODEX_UAT_REPORT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/accounts/: access.py  admin.py  apps.py  decorators.py  models.py  permissions.py  services.py
apps/appointments/: admin.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
apps/audit/: admin.py  apps.py  middleware.py  models.py  services.py
apps/core/: admin.py  apps.py  context_processors.py  forms.py  i18n.py  models.py  runtime_translations.py  urls.py  utils.py  views.py
apps/documents/: admin.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
apps/encounters/: admin.py  apps.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
apps/facilities/: admin.py  apps.py  models.py
apps/monitoring/: admin.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
apps/patients/: admin.py  apps.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
apps/prevention/: admin.py  apps.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
apps/referrals/: admin.py  apps.py  forms.py  models.py  urls.py  (+3 more)
config/: asgi.py  urls.py
deploy/: nginx.conf
templates/: base.html
tests/: conftest.py  test_appointments_telemedicine.py  test_auth.py  test_codex_business_flows.py  test_encounters.py  test_i18n.py  test_monitoring_reports.py  test_patient_portal.py  test_patients.py  test_prevention.py  test_referrals.py  test_staff_bugfixes.py  test_visits.py
(+113 files in other folders)
