[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rural-pmsp-system"
version = "0.1.0"
description = "MVP информационной системы управления ПМСП в сельских территориях"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django==5.2.*",
    "psycopg[binary]>=3.2,<3.4",
    "gunicorn>=23.0,<24.0",
    "django-htmx>=1.23,<1.24",
    "dj-database-url>=2.2,<2.4",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-django>=4.9,<5.0",
    "ruff>=0.11,<0.12",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "migrations",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ"]

[tool.ruff.format]
quote-style = "double"

[tool.setuptools.packages.find]
include = ["apps*", "config*"]
